[gd_scene load_steps=12 format=4 uid="uid://cxsy8s63gf8vg"]

[ext_resource type="Script" path="res://data/script/zone/stage_2.gd" id="1_qar5p"]
[ext_resource type="Texture2D" uid="uid://bj13c6bu3polu" path="res://data/zone/sprite/world_tileset.png" id="2_a884m"]
[ext_resource type="Texture2D" uid="uid://j6igio4pbdkx" path="res://data/ui/sprite/icon_coin.png" id="3_3lply"]
[ext_resource type="PackedScene" uid="uid://dm7m0n5ugxslt" path="res://data/chr/knight_data/knight.tscn" id="3_oi7v8"]
[ext_resource type="FontFile" uid="uid://b7gbn816jlora" path="res://data/ui/font/PixelOperator8.ttf" id="4_2krgk"]
[ext_resource type="Texture2D" uid="uid://c1i14tjblncuc" path="res://data/ui/sprite/icon_ability.png" id="5_778dk"]
[ext_resource type="Texture2D" uid="uid://cn8ysknuunk04" path="res://data/ui/sprite/exit_platform.png" id="6_tqa1i"]
[ext_resource type="PackedScene" uid="uid://p4m8f53y36xm" path="res://data/shader/shader_layer.tscn" id="8_h32q4"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3mbgk"]
texture = ExtResource("2_a884m")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0

[sub_resource type="TileSet" id="TileSet_j378u"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_3mbgk")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fvmcf"]
size = Vector2(18, 16)

[node name="stage2" type="Node2D"]
script = ExtResource("1_qar5p")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -159.0
offset_top = -101.0
offset_right = 187.0
offset_bottom = 78.0
color = Color(0, 0, 0, 1)

[node name="CoinMessage" type="Node" parent="."]

[node name="CoinIcon" type="Sprite2D" parent="CoinMessage"]
position = Vector2(-106, -38)
texture = ExtResource("3_3lply")

[node name="CoinMsgLabel" type="Label" parent="CoinMessage"]
offset_left = -93.0
offset_top = -42.0
offset_right = -74.0
offset_bottom = -34.0
theme_override_fonts/font = ExtResource("4_2krgk")
theme_override_font_sizes/font_size = 8
text = "txt"

[node name="AbilityMessage" type="Node" parent="."]

[node name="AbilityIcon" type="Sprite2D" parent="AbilityMessage"]
position = Vector2(20, -38)
texture = ExtResource("5_778dk")

[node name="AbilityMsgLabel" type="Label" parent="AbilityMessage"]
offset_left = 34.0
offset_top = -42.0
offset_right = 53.0
offset_bottom = -34.0
theme_override_fonts/font = ExtResource("4_2krgk")
theme_override_font_sizes/font_size = 8
text = "txt"

[node name="AbilityMsgLabel2" type="Label" parent="AbilityMessage"]
offset_left = 34.0
offset_top = -31.0
offset_right = 147.0
offset_bottom = 10.0
theme_override_fonts/font = ExtResource("4_2krgk")
theme_override_font_sizes/font_size = 8
text = "txt"
autowrap_mode = 2

[node name="ExitMessage" type="Node" parent="."]

[node name="ExitIcon" type="Sprite2D" parent="ExitMessage"]
position = Vector2(-104.68, -19)
scale = Vector2(0.76, 0.76)
texture = ExtResource("6_tqa1i")

[node name="ExitMsgLabel" type="Label" parent="ExitMessage"]
offset_left = -92.68
offset_top = -24.0
offset_right = 20.32
offset_bottom = 17.0
theme_override_fonts/font = ExtResource("4_2krgk")
theme_override_font_sizes/font_size = 8
text = "txt"
autowrap_mode = 2

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD2//v/AAAGAAEAAAD3//v/AAAGAAEAAAD4//v/AAAGAAEAAAD5//v/AAAGAAEAAAD6//v/AAAGAAEAAAD7//v/AAAGAAEAAAD8//v/AAAGAAEAAAD9//v/AAAGAAEAAAD+//v/AAAGAAEAAAD///v/AAAGAAEAAAAAAPv/AAAGAAEAAAABAPv/AAAGAAEAAAACAPv/AAAGAAEAAAADAPv/AAAGAAEAAAAEAPv/AAAGAAEAAAAFAPv/AAAGAAEAAAAGAPv/AAAGAAEAAAAHAPv/AAAGAAEAAAAIAPv/AAAGAAEAAAAJAPv/AAAGAAEAAAAKAPv/AAAGAAEAAAAKAPz/AAAGAAEAAAAJAPz/AAAGAAEAAAAIAPz/AAAGAAEAAAAHAPz/AAAGAAEAAAAGAPz/AAAGAAEAAAAFAPz/AAAGAAEAAAAEAPz/AAAGAAEAAAADAPz/AAAGAAEAAAACAPz/AAAGAAEAAAABAPz/AAAGAAEAAAAAAPz/AAAGAAEAAAD///z/AAAGAAEAAAD+//z/AAAGAAEAAAD9//z/AAAGAAEAAAD8//z/AAAGAAEAAAD7//z/AAAGAAEAAAD6//z/AAAGAAEAAAD5//z/AAAGAAEAAAD4//z/AAAGAAEAAAD3//z/AAAGAAEAAAD2//z/AAAGAAEAAAAKAP3/AAAGAAEAAAAKAP7/AAAGAAEAAAAKAP//AAAGAAEAAAAKAAEAAAAGAAEAAAAJAAEAAAAGAAEAAAAIAAEAAAAGAAEAAAAHAAEAAAAGAAEAAAAGAAEAAAAGAAEAAAAFAAEAAAAGAAEAAAAEAAEAAAAGAAEAAAADAAEAAAAGAAEAAAACAAEAAAAGAAEAAAABAAEAAAAGAAEAAAAAAAEAAAAGAAEAAAD//wEAAAAGAAEAAAD+/wEAAAAGAAEAAAD9/wEAAAAGAAEAAAD8/wEAAAAGAAEAAAD7/wEAAAAGAAEAAAD6/wEAAAAGAAEAAAD5/wEAAAAGAAEAAAD4/wEAAAAGAAEAAAD3/wEAAAAGAAEAAAD2/wEAAAAGAAEAAAD2//3/AAAGAAEAAAD2//7/AAAGAAEAAAD2////AAAGAAEAAAD2/wIAAAAGAAEAAAD3/wIAAAAGAAEAAAD4/wIAAAAGAAEAAAD5/wIAAAAGAAEAAAD6/wIAAAAGAAEAAAD7/wIAAAAGAAEAAAD8/wIAAAAGAAEAAAD9/wIAAAAGAAEAAAD+/wIAAAAGAAEAAAD//wIAAAAGAAEAAAAAAAIAAAAGAAEAAAABAAIAAAAGAAEAAAACAAIAAAAGAAEAAAADAAIAAAAGAAEAAAAEAAIAAAAGAAEAAAAFAAIAAAAGAAEAAAAGAAIAAAAGAAEAAAAHAAIAAAAGAAEAAAAIAAIAAAAGAAEAAAAJAAIAAAAGAAEAAAAKAAIAAAAGAAEAAAAKAAAAAAAHAAQAAAD2/wAAAAAHAAQAAAA=")
tile_set = SubResource("TileSet_j378u")

[node name="knight" parent="." instance=ExtResource("3_oi7v8")]
position = Vector2(-125, 3)

[node name="Camera2D" type="Camera2D" parent="knight"]
position = Vector2(119, -13)
zoom = Vector2(4, 4)
limit_left = -155
limit_top = -91
limit_right = 177
limit_bottom = 91
limit_smoothed = true

[node name="ShaderLayer" parent="." instance=ExtResource("8_h32q4")]

[node name="Exit" type="Area2D" parent="."]
visibility_layer = 2
position = Vector2(168, 8)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_fvmcf")

[connection signal="body_entered" from="Exit" to="." method="_on_exit_body_entered"]
